--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.0.1) stable; urgency=low
+
+  * Fixed up logging for the web interface
+  * Added better catch for validation errors 
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 19 Apr 2011 10:18:44 +0100
+
 mauvealert (3.0.0) stable; urgency=low
 
   * New version.
