--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.0.2) stable; urgency=low
+
+  * Now checks for transmission time set to zero.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 19 Apr 2011 10:27:13 +0100
+
 mauvealert (3.0.1) stable; urgency=low
 
   * Fixed up logging for the web interface
