--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+mauvealert (3.0.3) stable; urgency=low
+
+  * Added get_all back to front-end
+  * Fixed up logging for more classes 
+  * Catch empty notification lists
+  * Added console to server package
+  * Fixed document_root location
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 19 Apr 2011 11:31:10 +0100
+
 mauvealert (3.0.2) stable; urgency=low
 
   * Now checks for transmission time set to zero.
