--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.0.4) stable; urgency=low
+
+  * New release. 
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Fri, 17 Jun 2011 08:57:55 +0100
+
 mauvealert (3.0.3) stable; urgency=low
 
   * Added get_all back to front-end
