--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.0.5) stable; urgency=low
+
+  * Moar fiXXord. 
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Fri, 17 Jun 2011 18:08:21 +0100
+
 mauvealert (3.0.4) stable; urgency=low
 
   * New release. 
