--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.0.6) stable; urgency=low
+
+  * Reminders to peple lists now work. 
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Sun, 19 Jun 2011 21:52:16 +0100
+
 mauvealert (3.0.5) stable; urgency=low
 
   * Moar fiXXord. 
