--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.1.2) stable; urgency=low
+
+  * Fixed up some gruesome spelling errors.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 19 Jul 2011 16:42:19 +0100
+
 mauvealert (3.1.1) stable; urgency=low
 
   * Fixed mauveserver config file searching
