--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.1.3) stable; urgency=low
+
+  * Tidied up initscript
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 19 Jul 2011 17:59:01 +0100
+
 mauvealert (3.1.2) stable; urgency=low
 
   * Fixed up some gruesome spelling errors.
