Fixed a couple of bugs in the packaging and the pop3 server

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.3.1) stable; urgency=low
+
+  * Fixed bug in Pop3 server
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Thu, 04 Aug 2011 15:18:27 +0100
+
 mauvealert (3.3.0) stable; urgency=low
 
   * Added pop3 server
