--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.3.2) stable; urgency=low
+
+  * More pop3 tweaks
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Thu, 04 Aug 2011 17:18:13 +0100
+
 mauvealert (3.3.1) stable; urgency=low
 
   * Fixed bug in Pop3 server
