--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.4.3) stable; urgency=low
+
+  * Fixed notification race-conditions.
+  * Reminders now get sent at the start of the next during period.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 22 Aug 2011 11:58:28 +0100
+
 mauvealert (3.4.2) stable; urgency=low
 
   * Improved polling interval timing.
