--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.4.4) stable; urgency=low
+
+  * Added events calendar
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 23 Aug 2011 18:24:52 +0100
+
 mauvealert (3.4.3) stable; urgency=low
 
   * Fixed notification race-conditions.
