--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.5.3) stable; urgency=low
+
+  * Fixed do_get timeout
+  * Added small cache for fetching external URIs.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 31 Aug 2011 14:03:45 +0100
+
 mauvealert (3.5.2) stable; urgency=low
 
   * Added holiday checks
