--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.5.5) stable; urgency=low
+
+  * Further updates to the suppression code.  Should be much better now.
+  * XMPP interface fixed.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 06 Sep 2011 15:30:11 +0100
+
 mauvealert (3.5.4) stable; urgency=low
 
   * Fixed up alert suppression to work better
