--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.5.6) lucid; urgency=low
+
+  * XMPP interface now saves note.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 06 Sep 2011 15:56:01 +0100
+
 mauvealert (3.5.5) stable; urgency=low
 
   * Further updates to the suppression code.  Should be much better now.
