--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.6.1) stable; urgency=low
+
+  * Fixed up alert ack parsing a bit.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 07 Nov 2011 09:38:05 +0000
+
 mauvealert (3.6.0) stable; urgency=low
 
   * Changed ack command to split on spaces or commas or both
