--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.6.2) lucid; urgency=low
+
+  * Tinkered with dependencies
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 07 Nov 2011 10:09:54 +0000
+
 mauvealert (3.6.1) stable; urgency=low
 
   * Fixed up alert ack parsing a bit.
