--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mauvealert (3.7.0) stable; urgency=low
+
+  * Bundled timer in with processor.  What could go wrong..?
+  * Updated example.conf to work
+  * Added possibility of using postgres databases.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 30 Jan 2012 12:31:06 +0000
+
 mauvealert (3.6.3) stable; urgency=low
 
   * Logs received at time in Processor
