--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.7.4) stable; urgency=low
+
+  * Possible improvements in alert group caching, in an attempt to fix
+    slowness in the interface.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Thu, 22 Mar 2012 10:06:07 +0000
+
 mauvealert (3.7.3) stable; urgency=low
 
   * Added destroy command to XMPP interface.
