--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.7.7) stable; urgency=low
+
+  * Javascript refreshes now happen every two minutes.
+  * Alert now tries to find just one matching AlertGroup, not all.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Fri, 23 Mar 2012 15:02:53 +0000
+
 mauvealert (3.7.6) stable; urgency=low
 
   * Tweaked alert display to show the alert_group properly.
