--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+mauvealert (3.7.8) stable; urgency=low
+
+  * Reduced the liklihood of race conditions during evaluation of during {}
+    clauses. 
+  * Added cache to DuringRunner to reduce the number of times now? is
+    evaluated.
+  * Added a debug! option to notification_method clauses for easier, erm,
+    debugging.
+  * Alert#notify and AlertChanged#notify now make use of the notification
+    buffer make the disconnection betweeen the processing loop and
+    notifications happen sooner.
+  * Manpage typo sorted out.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 18 Apr 2012 12:10:07 +0100
+
 mauvealert (3.7.7) stable; urgency=low
 
   * Javascript refreshes now happen every two minutes.
