--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.8.2) stable; urgency=low
+
+  * Reverted bad changes to mauveserver + example.conf
+  * Added default options for a person
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Fri, 27 Apr 2012 10:58:56 +0100
+
 mauvealert (3.8.1) stable; urgency=low
 
   * Calendar now honours http timeout + ssl verify settings.
