--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 mauvealert (3.8.4) stable; urgency=low
 
   * Fixed notification when on holiday/off sick
+  * Strings are now stripped of any illegal/non-UTF8 characters
 
- -- Patrick J Cherry <patrick@bytemark.co.uk>  Fri, 27 Apr 2012 15:32:07 +0100
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 30 Apr 2012 12:53:33 +0100
 
 mauvealert (3.8.3) stable; urgency=low
 
