--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mauvealert (3.9.2) stable; urgency=low
+
+  * Removed destroy XMPP command -- replaced with clear.
+  * no_one_in is now only called once per DuringRunner instance per
+    people_list to try and reduce hammering on the calendar.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 09 May 2012 17:05:43 +0100
+
 mauvealert (3.9.1) stable; urgency=low
 
   * Web interface now uses an ajax call to work out ack times, falling back to
