--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mauvealert (3.11.0) stable; urgency=low
+
+  * Removed needless counting of alerts in the web interface
+  * Made alert queries more accurate
+  * Removed duplicate code in Alert#in_source_list
+  * Cut down on the number of DNS queries in SourceList#includes?
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 21 Nov 2012 14:20:42 +0000
+
 mauvealert (3.10.0) stable; urgency=low
 
   * Added URLs which can be polled for source lists
