--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mauvealert (3.11.6-1) stable; urgency=low
+
+  * Added dm-validations monkey-patch to automatically save validation
+    failures, when no failures are given.
+  * Reverted change to AlertChanged.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 27 Nov 2012 09:55:44 +0000
+
 mauvealert (3.11.5-1) stable; urgency=low
 
   * Now uses ruby-ipaddress instead of IPAddr.
