--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.11.7-1) stable; urgency=low
+
+  * Models are now more picky when setting created_at/updated_at times.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Tue, 27 Nov 2012 11:51:55 +0000
+
 mauvealert (3.11.6-2) stable; urgency=low
 
   * Fixed missing library file. 
