--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.13.1-1) stable; urgency=low
+
+  * Rewrote decision code for notifying on save for an alert.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Thu, 29 Nov 2012 16:17:11 +0000
+
 mauvealert (3.12.1-1) stable; urgency=low
 
   * Added optional notification suppression for alerts.
