--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mauvealert (3.15.1-1) stable; urgency=low
+
+  * Rationalised alert tables to look the same for both searches and
+    normal views.
+  * Events calendar is now faster as fewer queries are made when loading. 
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Fri, 30 Nov 2012 22:48:43 +0000
+
 mauvealert (3.14.2-1) stable; urgency=low
 
   * Alert actions are now controlled by just one form, and two actions.
