--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mauvealert (3.15.5-1) stable; urgency=low
+
+  * Fixed bug whereby alerts cleared by a "replace" flag were not sending
+    notifications.
+  * The alert summary is now recorded in the history for an alert.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 05 Dec 2012 12:34:21 +0000
+
 mauvealert (3.15.4-1) stable; urgency=low
 
   * Fixed typo in AlertGroup.
