--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.15.6-1) stable; urgency=low
+
+  * Alert fields are now truncated if they're too long.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 12 Dec 2012 10:47:28 +0000
+
 mauvealert (3.15.5-1) stable; urgency=low
 
   * Fixed bug whereby alerts cleared by a "replace" flag were not sending
