--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.15.7-1) stable; urgency=low
+
+  * Altered alert_group to only set one reminder.
+  * Allow alert to clear raised_at/cleared_at times if none specified.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 01 May 2013 10:16:52 +0100
+
 mauvealert (3.15.6-2) stable; urgency=low
 
   * Added generic_http library that had been missed off.
