--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauvealert (3.15.8-1) stable; urgency=low
+
+  * Added a further check to make sure the last alert of the same update type
+    was being updated by reminders.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 01 May 2013 15:41:10 +0100
+
 mauvealert (3.15.7-1) stable; urgency=low
 
   * Altered alert_group to only set one reminder.
