--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.15.9-1) stable; urgency=low
+
+  * Added Mauve::QuickUpdate library
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Thu, 02 May 2013 14:23:34 +0100
+
 mauvealert (3.15.8-1) stable; urgency=low
 
   * Added a further check to make sure the last alert of the same update type
