--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.15.15-1) stable; urgency=medium
+
+  * Tidied up iconv usage for ruby1.9+
+
+ -- Patrick J Cherry <patch@bytemark.co.uk>  Thu, 10 Jul 2014 13:40:27 +0100
+
 mauvealert (3.15.14-2) stable; urgency=low
  
   * Relaxed mauvealert-client ruby dependency.
