--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.16.0) UNRELEASED; urgency=medium
+
+  * Re-packaged to install server into /srv, removing common package.
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 31 Jul 2017 11:31:34 +0100
+
 mauvealert (3.15.15-1) stable; urgency=medium
 
   * Tidied up iconv usage for ruby1.9+
