--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mauvealert (3.16.0) UNRELEASED; urgency=medium
+mauvealert (3.16.0) stable; urgency=medium
 
   * Re-packaged to install server into /srv, removing common package. (!2)
   * Fixed a typo in the Depends field for mauvealert-client. (!2)  
@@ -12,7 +12,7 @@ mauvealert (3.16.0) UNRELEASED; urgency=medium
   [ Telyn Roat]
   * Removed need for locale gem outside of tests. (github pr #3)
 
- -- Patrick J Cherry <patrick@bytemark.co.uk>  Mon, 01 Aug 2017 14:37:32 +0100
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Wed, 31 Jan 2018 11:05:14 +0000
 
 mauvealert (3.15.15-1) stable; urgency=medium
 
