--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mauvealert (3.16.1) UNRELEASED; urgency=medium
+
+  * Fixed Hipchat notification class (#36)
+
+ -- Patrick J Cherry <patrick@bytemark.co.uk>  Thu, 01 Mar 2018 10:34:38 +0000
+
 mauvealert (3.16.0) stable; urgency=medium
 
   * Re-packaged to install server into /srv, removing common package. (!2)
